Fix resizing in conjunction with scrollbar display.  But, this is just a temporary fix.  The ResizeHandle concept only works if there is a status bar on the bottom of the window; otherwise, the scrollbar and ResizeHandle overlap.  Need to implement handleless resize on all edges and corners.
git-svn-id: http://svn.dojotoolkit.org/src@2275 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlResizeHandle.css
+++ b/trunk/src/widget/templates/HtmlResizeHandle.css
@@ -7,7 +7,7 @@
 	padding: 0px;
 	margin: 0px;
 	border: 0px;
-	z-index: 2;
+	z-index: 20;
 	background-color: ThreeDFace;
 	cursor: nw-resize;
 }
